--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start": "node node_modules/manifest/scripts/watch/watch.js",
+    "start": "concurrently \"node node_modules/manifest/dist/manifest/src/main.js .\" \"node proxy.js\"",
     "seed": "node node_modules/manifest/dist/manifest/src/seed/scripts/seed.js"
   },
   "dependencies": {
+    "concurrently": "^9.2.1",
+    "http-proxy": "^1.18.1",
     "manifest": "^4.17.8"
   }
 }
