--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,8 @@
     "concurrently": "^9.2.1",
     "http-proxy": "^1.18.1",
     "manifest": "^4.17.8"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
