--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "install:playwright": "npx playwright install"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.9",
     "@mnfst/sdk": "^1.3.2",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.17",
     "i18next": "^25.5.3",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^16.0.0",
+    "react-intersection-observer": "^9.13.1",
+    "react-parallax-tilt": "^1.7.203",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1"
   },
@@ -32,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "cheerio": "^1.1.2",
     "concurrently": "^9.2.1",
     "eslint": "^9",
@@ -39,8 +44,9 @@
     "framer-motion": "^11.11.17",
     "got": "^14.4.9",
     "playwright": "^1.56.0",
+    "postcss": "^8.5.6",
     "sharp": "^0.33.5",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
 }
