--- a/package.json
+++ b/package.json
@@ -50,17 +50,20 @@
     "@react-spring/web": "^10.0.3",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/three": "^0.180.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^11.11.17",
     "gsap": "^3.13.0",
+    "i": "^0.3.7",
     "i18next": "^25.5.3",
     "lenis": "^1.3.11",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-i18next": "^15.4.2",
+    "photoswipe": "^5.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
@@ -85,7 +88,7 @@
     "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.18.2",
     "got": "^14.4.9",
     "playwright": "^1.56.0",
     "postcss": "^8.5.6",
